--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "cd server && nodemon server.js",
     "client": "cd client && npm start",
-    "develop": "concurrently \"npm run client\"  \"npm run server\""
+    "start": "concurrently \"npm run client\"  \"npm run server\""
   },
   "repository": {
     "type": "git",
