--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cd server && nodemon server.js",
-    "client": "cd client && npm start",
-    "start": "concurrently \"npm run client\"  \"npm run server\""
+    "start": "node server/server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "client": "cd client && npm start"
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ncortes04/fig-Ecomm.git"
