--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "client": "cd client && npm start"
-  },
-  
+    "client": "cd client && npm start",
+    "server": "nodemon server/server.js"
+  },  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ncortes04/fig-Ecomm.git"
