--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "client": "cd client && npm start",
-    "server": "nodemon server/server.js"
+    "start": "node Server/server.js",
+    "heroku-postbuild": "cd Client && npm install && npm run build",
+    "client": "cd Client && npm start",
+    "server": "nodemon Server/server.js"
   },  
   "repository": {
     "type": "git",
