--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node Server/server.js",
+    "start": "concurrently \"npm run client\" \"npm run server\"",
     "heroku-postbuild": "cd Client && npm install && npm run build",
     "client": "cd Client && npm start",
     "server": "nodemon Server/server.js"
